tests/trybuild/multiple_different_generics.stderr
error: Aggregating multiple different generic errors is not supported. Instead redefine the error set with the desired generics and fields.
  --> tests/trybuild/multiple_different_generics.rs:32:38
   |
32 |     } || AuthError1 || AuthError2 || AuthError3;
   |                                      ^^^^^^^^^^

warning: unused import: `std::fmt::Debug`
 --> tests/trybuild/multiple_different_generics.rs:1:5
  |
1 | use std::fmt::Debug;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
